# syndicate

./: Cargo.toml
src/: client.rs  lib.rs  main.rs  rpc.rs
