[package]
name = "syndicate"
version = "0.1.0"
authors = ["Matt Odden <mathewrodden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = "0.2"

rand = "0.8"
